--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   node:
-    # images: node:18.10.0
+    images: node:18.10.0
     container_name: node_for_angular
     build: ./docker/node
     ports:
