--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,12 @@ services:
   node:
     image: node:18.10.0
     container_name: node_for_angular
-    build: ./docker/node
+    build: 
+      context: .
+      dockerfile: ./docker/node/Dockerfile
     ports:
       - "4200:4200"
     volumes:
       - ".:/projects"
+      - "/projects/node_modules"
     tty: true
