add overdue function to component

--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -1,8 +1,11 @@
 FROM node:18.10.0
-WORKDIR /projects
 RUN apt update && apt install -y \
     sudo \
     vim
+WORKDIR /projects
+ENV PATH /usr/local/bin:$PATH
+
 COPY ./angular-todo/package*.json ./
+RUN npm install -g @angular/cli
 RUN npm install
 EXPOSE 4200
